<resources>
    <string name="app_name">AnimationApplication</string>
    <string name="frame_animation">Frame Animation</string>
    <string name="view_animation_btn">View Animation</string>
    <string name="value_animations">Value Animations</string>
    <string name="object_animations">Object Animations</string>
    <string name="custom_animations">Custom Animations</string>
    <string name="animation_view_title">Animation View</string>
    <string name="custom_view_title">Custom View</string>
    <string name="frame_animation_title">Frame Animation</string>
    <string name="object_animation_title">Object Animation</string>
    <string name="value_animation_title">Value Animation</string>
</resources>
